# model-factory

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  cluster.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: bootstrap.md  conversion.md  hpo.md  licensing.md  longitudinal_ct_tubingen.md  operator.md  qa.md  training.md  user-quickstart.md
docs/runbooks/: partial_label_generalist.md  ray_worker_cold_start.md
examples/smoke/: run_msd_hippocampus.sh
images/nnunet-trainer/: .dockerignore  Dockerfile  claim-mig.sh
images/synthseg-labeler/: Dockerfile
images/totalseg-trainer/: Dockerfile
infra/cluster-repair/: 99-preserve-hostname.cfg  apply.sh  kubelet-hostname-fix.md
infra/helm/docker-registry/: values.yaml
infra/helm/kube-prometheus-stack/: values.yaml
infra/helm/kuberay-operator/: values.yaml
infra/helm/kueue/: values.yaml
infra/helm/loki-stack/: values.yaml
infra/helm/minio/: values.yaml
infra/helm/mlflow/: values.yaml
infra/helm/postgres/: values.yaml
infra/kustomize/: convert-job.yaml.j2  dcgm-servicemonitor.yaml  factory-alerts.yaml  factory-claim-mig-script-configmap.yaml  factory-cluster-queue.yaml  factory-local-queue.yaml  factory-mig-lease-reaper.yaml  factory-priority-classes.yaml  factory-pvc.yaml  factory-ray-rbac.yaml  factory-resource-flavor.yaml  hpo-driver-job.yaml.j2  mig-config-factory.yaml  preprocess-job.yaml.j2  ray-driver-job.yaml.j2  secrets.example.yaml  synthseg-label-base-job.yaml  synthseg-label-parc-job.yaml  train-job.yaml.j2
infra/kustomize/qa-interface/: deployment.yaml  dragonfly.yaml  kustomization.yaml  service.yaml
overlays/: README.md
scripts/: agent_status.sh  bootstrap.sh  download_luna16.sh  download_msd_task04.sh  download_msd_task07.sh  download_msd_task08.sh  download_totalseg_v2.sh  extract_overlay.sh  mig_partition.sh  patch_worker.sh  precheck_workers.sh  runtime_shim_install.sh  submit_folds.sh
services/: README.md
services/qa-viewer/: Dockerfile  requirements.txt
services/qa-viewer/web/: .dockerignore  next.config.ts  package-lock.json  package.json
src/modelfactory/: cli.py  config.py
src/modelfactory/analysis/: calibration.py  failure_mining.py
src/modelfactory/dashboard/: __init__.py  render.py
src/modelfactory/datasets/: aliases.py  convert.py  register.py  specs.py
src/modelfactory/hpo/: runner.py
src/modelfactory/inference/: __init__.py  meshes.py  metrics.py  predictor_cache.py  run.py
src/modelfactory/infra/: __init__.py  cli.py  discover.py  migctl.py  render.py  spec.py
src/modelfactory/jobs/: nnunet.py  ray_driver.py
src/modelfactory/qa/: __init__.py  (+12 more)
tests/datasets/: test_overlay.py
tests/infra/: test_discover.py  test_render.py
tests/jobs/: test_train_render.py
tests/qa/: test_crossval.py  test_schedule.py  test_upload_and_cohort.py
(+78 files in other folders)
